[tool.poetry]
name = "iceberg"
version = "0.0.1"
description = "Plex torrent streaming through Real Debrid and 3rd party services like Overseerr, Mdblist, etc."
authors = ["Iceberg Developers"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dill = "^0.3.8"
plexapi = "^4.15.10"
requests = "^2.31.0"
xmltodict = "^0.13.0"
lxml = "^5.1.0"
pathos = "^0.3.2"
pydantic = "^2.6.3"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
apscheduler = "^3.10.4"
watchdog = "^4.0.0"
deepdiff = "^6.7.1"
regex = "^2023.12.25"
coverage = "^7.4.3"
rank-torrent-name = "^0.2.13"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
pyperf = "^2.2.0"
ruff = "^0.4.5"
isort = "^5.10.1"
codecov = "^2.1.13"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
ignore = [
  "PLR0913", # flask8-bugbear: Too many arguments for a method or function
  "PLR0911", # flask8-bugbear: Too many return statements
  "PLR2004", # flake8-bugbear: Magic value used in comparison
  "S104", # flake8-bandit: Possible binding to all interfaces
  "S108", # flake8-bandit: Probable insecure usage of temp file/directory
  "S311", # flake8-bandit: Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "S101", # ruff: Ignore assert warnings on tests
  "RET505", # 
  "RET503"  # ruff: Ignore required explicit returns (is this desired?)
]
extend-select = [
  "I",   # isort
  "C90", # mccabe complexity
  "B",   # flake8-bugbear
  "PL",  # pycodestyle
  "S",   # flake8-bandit
  "T10", # flake8-debugger
  "PIE", # flake8-pie
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]